<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".PrimeActivity">


    <Button
        android:id="@+id/find_primes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_primes"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="100dp"/>


    <Button
        android:id="@+id/terminate_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terminate_search"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="200dp"/>

    <CheckBox
        android:id="@+id/pacify_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pacify_search"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="300dp"/>

    <TextView
        android:id="@+id/display_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_current"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="400dp"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/display_latest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_latest"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="500dp"
        android:textSize="25dp"/>



</RelativeLayout>